--- a/sass/main.scss
+++ b/sass/main.scss
@@ -69,6 +69,7 @@ body {
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
+            column-gap: 2em;
             row-gap: 2em;
 
             .cost {
