--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-column-gap: 2em;
+          column-gap: 2em;
   row-gap: 2em;
 }
 
