--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,9 +52,8 @@ body {
                 font-size: 2rem;
             }
 
-            .amount,
-            .peoples,
-            .tip {
+            input,
+            select {
                 padding: 0.6em 1em;
                 width: 100%;
                 font-size: 1.6rem;
